--- a/requirements_all_ds.txt
+++ b/requirements_all_ds.txt
@@ -13,7 +13,7 @@ pymssql==2.1.5
 dql==0.6.2
 dynamo3==1.0.0
 boto3>=1.14.0,<1.15.0
-botocore>=1.13,<1.17.55
+botocore>=1.13,<=1.17.55
 sasl>=0.1.3
 thrift>=0.8.0
 thrift_sasl>=0.1.0
